sites/all/themes/atwork_zen/sass/layouts/_mainnav.scss
// Superfish CSS placed locally to override default CSS

#navigation .ext {
  display: none;
}

#navigation ul li a {
  display: block;
  text-decoration: none;
  padding: 4px 10px 5px;
  /*border-bottom: solid 1px #c7c7c7;*/
}

#navigation a.block-title-link {
  color: #FFF;
  font-weight: bold;
  background-color: #26669E;
  font-size: .95em\0/ !important;/* For IE only */
  cursor: default;
}


#navigation .item-list .views-field-title a {
  display: block;
  padding: 5px 0px 5px 5px;
  margin: 0px;
  font-weight: bold;
  color: #004B8D;
}
#navigation .item-list .views-field-title a:hover {
  background-color: #003462;
  color: #FFF;
}
#navigation .item-list .views-field-title a:first-child {
}
#navigation .views-field-field-date {
  padding-left: 5px;
  margin-bottom: 8px;
  color: #818283;
}


#navigation {
  max-width:960px;
  margin:0 auto;
  display: inline-block;
  .region-navigation {
    width:100%;
    max-width:1240px;
    display: block;
    margin: 0 auto 0;
    padding: 0px;
    top: 0px;
    position: fixed;
    clear: both;
    line-height: 1.5em;
    z-index: 100;
    width: 100vw;
    //left: calc(-50vw + 50%);
    background-color: #ECECEC;
  }
  padding-left:0;
  padding-right:0;
  padding:0;
  .next-menu-link {
    color: inherit;
  }
  .links li,
  .menu li {
    padding:0;
  }
  ul.sf-menu.sf-style-none {
    float: left;
    margin-bottom: 0px;
    padding: 0;
  }
  ul.sf-menu.sf-style-none.sf-navbar {
    width: 100%;
  }
  ul.sf-menu.sf-style-none ul {
    margin: 0;
    padding: 0;
  }
  ul.sf-menu.sf-style-none a, ul.sf-menu.sf-style-none a:visited, ul.sf-menu.sf-style-none span.nolink {
    padding: 0.50em 1.5em;
    background-color:#ececec;
  }
  ul.sf-menu.sf-style-none.rtl a.sf-with-ul, ul.sf-menu.sf-style-none.rtl span.nolink.sf-with-ul {
    padding-left: 2.25em;
    padding-right: 1em;
  }
  ul.sf-menu.sf-style-none span.sf-description {
    color: #13a;
    display: block;
    font-size: smaller;
    line-height: 1.5;
    margin: 0.25em 0 0 0;
    padding: 0;
  }
  ul.sf-menu.sf-style-none li, ul.sf-menu.sf-style-none.sf-navbar {
    background: transparent;
  }
  ul.sf-menu.sf-style-none li li, ul.sf-menu.sf-style-none.sf-navbar > li > ul {
    a {
      color: $text;
    }
  }
  ul.sf-menu.sf-style-none li li li {
    background: $white;
  }
  ul.sf-menu.sf-style-none li:hover, ul.sf-menu.sf-style-none li.sfHover, ul.sf-menu.sf-style-none a:focus, ul.sf-menu.sf-style-none a:hover, ul.sf-menu.sf-style-none span.nolink:hover {
    background: #e6f2f9;
    outline: 0;
    text-decoration: none;
    color:#406b93;
  }
  div.sf-accordion-toggle.sf-style-none a {
    background: #bdd2ff;
    color: #13a;
    display: inline-block;
    font-weight: bold;
    padding: 1em 3em 1em 1em;
    position: relative;
  }
  div.sf-accordion-toggle.sf-style-none > a:after {
    content: "≡";
    font-size: 2em;
    position: absolute;
    right: 0.5em;
    top: 50%;
    -webkit-transform: translateY(-50%);
    -moz-transform: translateY(-50%);
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
    speak: none;
  }
  div.sf-accordion-toggle.sf-style-none a.sf-expanded, ul.sf-menu.sf-style-none.sf-accordion li.sf-expanded {
    background: #cfdeff;
  }
  div.sf-accordion-toggle.sf-style-none a.sf-expanded, ul.sf-menu.sf-style-none.sf-accordion li.sf-expanded > a, ul.sf-menu.sf-style-none.sf-accordion li.sf-expanded > span.nolink {
    font-weight: bold;
  }
  ul.sf-menu.sf-style-none.sf-accordion li a.sf-accordion-button {
    font-weight: bold;
    position: absolute;
    right: 0;
    top: 0;
    z-index: 499;
  }
  ul.sf-menu.sf-style-none.sf-accordion li li a, ul.sf-menu.sf-style-none.sf-accordion li li span.nolink {
    padding-left: 2em;
  }
  ul.sf-menu.sf-style-none.sf-accordion li li li a, ul.sf-menu.sf-style-none.sf-accordion li li li span.nolink {
    padding-left: 3em;
  }
  ul.sf-menu.sf-style-none.sf-accordion li li li li a, ul.sf-menu.sf-style-none.sf-accordion li li li li span.nolink {
    padding-left: 4em;
  }
  ul.sf-menu.sf-style-none.sf-accordion li li li li li a, ul.sf-menu.sf-style-none.sf-accordion li li li li li span.nolink {
    padding-left: 5em;
  }
  ul.sf-menu.sf-style-none.rtl.sf-accordion li li a, ul.sf-menu.sf-style-none.rtl.sf-accordion li li span.nolink {
    padding-left: auto;
    padding-right: 2em;
  }
  ul.sf-menu.sf-style-none.rtl.sf-accordion li li li a, ul.sf-menu.sf-style-none.rtl.sf-accordion li li li span.nolink {
    padding-left: auto;
    padding-right: 3em;
  }
  ul.sf-menu.sf-style-none.rtl.sf-accordion li li li li a, ul.sf-menu.sf-style-none.rtl.sf-accordion li li li li span.nolink {
    padding-left: auto;
    padding-right: 4em;
  }
  ul.sf-menu.sf-style-none.rtl.sf-accordion li li li li li a, ul.sf-menu.sf-style-none.rtl.sf-accordion li li li li li span.nolink {
    padding-left: auto;
    padding-right: 5em;
  }
  ul.sf-menu.sf-style-none li.sf-multicolumn-wrapper ol, ul.sf-menu.sf-style-none li.sf-multicolumn-wrapper ol li {
    margin: 0;
    padding: 0;
  }
  ul.sf-menu.sf-style-none li.sf-multicolumn-wrapper a.menuparent, ul.sf-menu.sf-style-none li.sf-multicolumn-wrapper span.nolink.menuparent {
    font-weight: bold;
  }
  // Superfish Main menu changes
  ul#superfish-1 {
    > li > ul {
      margin-top:-3px;
      background: #ECECEC;
      border-top:solid 1px #CCC;
      border-bottom:solid 3px #818283;
      border-left: solid 1px #CAC7C7;
      border-right: solid 1px #CAC7C7;
      padding-bottom:3px;
    }
    .sf-depth-1 {
      a:hover {
        background-color: #10233c;
        color: #FFFFFF;
      }
    }
    .sf-depth-2, .sf-depth-3 {
      a.sf-depth-2, a.sf-depth-3 {
        &:hover {
          background-color: #10233c;
          color: #FFFFFF;
        }
      }
      > ul {
        background-color: $white;
        border: solid 1px #CCCCCC;
        box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
        padding: 5px 5px 2px;
        top:2.1em;
      }
    }
    .sf-menu li:hover > ul, .sf-menu li.sfHover > ul {
      top:2.1em;
    }
    .sf-depth-3, .sf-depth-4 {
      a.sf-depth-3, a.sf-depth-4 {
        color: $text;
        display: block;
        border: solid 1px #CCCCCC;
        margin-bottom: 3px;
        padding-top: 4px;
        padding-bottom: 6px;
        &:hover {
          color: $white;
          background-color: $banner-blue;
        }
      }
    }
  }
  span.sf-sub-indicator {
    background: url('../images/menu-expanded.png') no-repeat;
    top:12px;
    right:5px;
  }
  &:hover {
    background: url('../images/arrows.png') no-repeat;
    top:15px;
    right:5px;
  }
}
.not-front #navigation {
  .region.region-navigation {
    max-width:960px;
  }
  ul#superfish-1 {
    > li > ul {
      max-width:960px;
    }
  }
}
.sf-depth-1.next-menu-item.menuparent.sf-breadcrumb.sfHover, .active-trail.sf-depth-2.next-menu-item.sf-no-children > a, .active-trail.sf-depth-2.next-menu-item.menuparent > a {
  background-color: $black;
  color: $exec-greyborder;
}

/*a.sf-depth-1.next-menu-link.menuparent:after,
 a.sf-depth-2.next-menu-link.menuparent:after {// Google Materials Font - Down Chevron
  font-family: "Material Icons";
  content: " expand_more";
  font-size:1.25rem;
  line-height:inherit;
  vertical-align: text-top;
}*/
  

